unpackaged/main/default/objects/Operations_Input__c/Operations_Input__c.object-meta.xml
<CustomObject>
    <label>Operations Input</label>
    <nameField>
        <displayFormat>O-{0000}</displayFormat>
        <label>Operations Input Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Operations Inputs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>