unpackaged/main/default/objects/Operations_Input__c/fields/Associated_Territory_Trade_License__c.field-meta.xml
<CustomField>
    <fullName>Associated_Territory_Trade_License__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Associated Territory Trade License</label>
    <referenceTo>Trade_Licensing__c</referenceTo>
    <relationshipLabel>Operations Inputs</relationshipLabel>
    <relationshipName>Operations_Inputs_del</relationshipName>
    <type>Lookup</type>
</CustomField>