unpackaged/main/default/objects/Operations_Input__c/fields/Baseline_Capacity_Available_jobs__c.field-meta.xml
<CustomField>
    <fullName>Baseline_Capacity_Available_jobs__c</fullName>
    <label>Baseline Capacity Available (jobs)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>