unpackaged/main/default/objects/Operations_Input__c/fields/Baseline_Crews_Available__c.field-meta.xml
<CustomField>
    <fullName>Baseline_Crews_Available__c</fullName>
    <label>Baseline Crews Available</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>