unpackaged/main/default/objects/Operations_Input__c/fields/Max_System_Size_Schedule_Day_kW__c.field-meta.xml
<CustomField>
    <fullName>Max_System_Size_Schedule_Day_kW__c</fullName>
    <label>Max System Size / Schedule Day (kW)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>