unpackaged/main/default/objects/Operations_Input__c/fields/Schedule_Days_Per_Installation__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Days_Per_Installation__c</fullName>
    <label>Schedule Days Per Installation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>