unpackaged/main/default/objects/Operations_Input__c/fields/Scheduling_Lead_Time__c.field-meta.xml
<CustomField>
    <fullName>Scheduling_Lead_Time__c</fullName>
    <label>Scheduling Lead Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>